Commenting out height in the main section of html to prevent overflow problem when screen height is limited. Scroll will occur instead.

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 100%;
+    /*height: 100%;*/
 }
 
 #day-container {
